[package]
name = "carmine_exports"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
carmine_app = { path = "../carmine_app/" }
carmine_errors = { path = "../carmine_errors/" }
carmine_logging = { path = "../carmine_logging/" }
events = { path = "../carmine_events/events/" }
